<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textColor="@color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_edit_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            style="@style/EditTextTheme"
            android:id="@+id/edittextemail"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_edit_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:hint="@string/hint_edit_password"
            android:padding="10dp"
            style="@style/EditTextTheme"
            android:id="@+id/edittextsenha"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_edit_text"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title_login_fragment"
            android:layout_marginTop="16dp"
            app:backgroundTint="@null"
            style="@style/ButtomTheme"
            android:id="@+id/btnLogin" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_register_login_fragment"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/btnRecover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_recover_login_fragment"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textColor="@color/white"/>
        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"
            android:layout_gravity="center"
            tools:visibility="visible"
            android:visibility="invisible"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomes"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>