<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout1">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/icback"
            android:paddingTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Criar Conta"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"/>

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_edit_email"
                android:inputType="textEmailAddress"
                style="@style/EditTextTheme"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:id="@+id/edittextemail"
                android:background="@drawable/bg_edit_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:hint="@string/hint_edit_password"
                style="@style/EditTextTheme"
                android:padding="10dp"
                android:id="@+id/edittextsenha"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                style="@style/ButtomTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_title_toolbar_register_fragment"
                app:backgroundTint="@null" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:indeterminateTint="@color/white"
                android:layout_gravity="center"
                android:visibility="invisible"
                tools:visibility="visible"/>
    </LinearLayout>
    </LinearLayout>

</ScrollView>